@@ -38,7 +38,6 @@ void inspircd_cmd_pass(char *pass);
 void inspircd_cmd_server(char *servname, int hop, char *descript);
 void inspircd_cmd_version(char *server);
 
-int denora_event_436(char *source, int ac, char **av);
 int denora_event_away(char *source, int ac, char **av);
 int denora_event_ping(char *source, int ac, char **av);
 int denora_event_motd(char *source, int ac, char **av);
@@ -51,6 +50,7 @@ int denora_event_quit(char *source, int ac, char **av);
 int denora_event_squit(char *source, int ac, char **av);
 int denora_event_topic(char *source, int ac, char **av);
 int denora_event_part(char *source, int ac, char **av);
+int denora_event_whois(char *source, int ac, char **av);
 int denora_event_server(char *source, int ac, char **av);
 int denora_event_nick(char *source, int ac, char **av);
 int denora_event_privmsg(char *source, int ac, char **av);
@@ -61,6 +61,8 @@ int denora_event_pong(char *source, int ac, char **av);
 int denora_event_fjoin(char *source, int ac, char **av);
 int denora_event_idle(char *source, int ac, char **av);
 int denora_event_fhost(char *source, int ac, char **av);
+int denora_event_setident(char *source, int ac, char **av);
+int denora_event_chgident(char *source, int ac, char **av);
 int denora_event_fname(char *source, int ac, char **av);
 int denora_event_ftopic(char *source, int ac, char **av);
 int denora_event_version(char *source, int ac, char **av);
